--- a/VSWork/plxnhApi/ApiMonitor/pages/login.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/login.html
@@ -101,7 +101,7 @@ html,body {
 			</div>
 			<div class="login-content ">
 			<div class="form">
-			<form action="#" method="post">
+			
 				<div class="form-group">
 					<div class="col-xs-12  ">
 						<div class="input-group">
@@ -121,17 +121,18 @@ html,body {
 				
 				<div class="form-group" style="padding-left:70px;">
 					<div class="col-xs-6 link">
-                        <button type="submit" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-off"></span>确定</button>
+                        <button class="btn btn-sm btn-info" onclick="window.location = 'mzbc.html'"><span class=" glyphicon=glyphicon glyphicon-off"=glyphicon-off"></span>确定</button>
 					</div>
 					<div class="col-xs-6 link">
-                        <button type="submit" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-off"></span>取消</button>
+                        <button class="btn btn-sm btn-info"><span class="glyphicon glyphicon-off"></span>取消</button>
 					</div>
 				</div>
-			</form>
+			
 			</div>
 		</div>
 	</div>
 </div>
+
 
 </body>
 
