--- a/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
@@ -180,7 +180,19 @@
                                     <tr>
                                         <td>入院科室：呼吸道感染</td>
                                         <td>入院时间：2016-10-10</td>
-                                        <td>地区编码：123</td>
+                                        <td>地区编码：
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-default dropdown-toggle"
+                                                        data-toggle="dropdown">
+                                                    选择 <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li><a href="#">类别1</a></li>
+                                                    <li><a href="#">类别2</a></li>
+                                                    <li><a href="#">类别3</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
                                         <td></td>
                                     </tr>
                                     <tr>
