--- a/VSWork/plxnhApi/ApiMonitor/pages/zymxsc.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/zymxsc.html
@@ -219,7 +219,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="text-muted bootstrap-admin-box-title">农合基本信息</div>
+                            <div class="text-muted bootstrap-admin-box-title">明细</div>
                         </div>
                         <div class="bootstrap-admin-panel-content">
                             <table class="table">
@@ -265,13 +265,7 @@
 
             <p></p>
 
-            <div>
-                <ul style="list-style:none;">
-                    <li style="float:left;width:33%;"><button class="btn btn-default">入院登记</button></li>
-                    <li style="float:left;width:33%;"><button class="btn btn-default">取消登记</button></li>
-                    <li style="float:left;width:33%;"><button class="btn btn-default">关闭</button></li>
-                </ul>
-            </div>
+            
            
         </div>
 
