--- a/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
@@ -214,33 +214,57 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="text-muted bootstrap-admin-box-title">农合基本信息</div>
-                        </div>
-                        <div class="bootstrap-admin-panel-content">
-                            <table class="table">
+            <div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <div class="text-muted bootstrap-admin-box-title">农合基本信息</div>
+                            </div>
+                            <div class="bootstrap-admin-panel-content">
+                                <table class="table">
 
-                                <tbody>
-                                    <tr>
-                                        <td>姓名：刘德华</td>
-                                        <td>费别：xxxx</td>
-                                        <td>住院号：123456789</td>
-                                        <td>住院流水：4564687631xxadas</td>
-                                    </tr>
-                                    
-                                </tbody>
-                            </table>
+                                    <tbody>
+                                        <tr>
+                                            <td>登录名：刘德华</td>
+                                            <td>所在单位ID：xxxx</td>
+                                            <td>电话：123456789</td>
+                                            <td>单位名称：4564687631xxadas</td>
+                                        </tr>
+                                        <tr>
+                                            <td>机构详细地址编码：1235</td>
+                                            <td>机构类型：乡</td>
+                                            <td>机构级别：村卫生室</td>
+                                            <td>机构地区编码：5464</td>
+                                        </tr>
+                                        <tr>
+                                            <td>补偿年度：2016</td>
+                                            <td>本县芯片卡刷卡授权：有刷卡权限</td>
+                                            <td>本县刷卡标志是够开启：开启</td>
+                                            <td>此医疗机构刷卡权限是否开启：刷</td>
+                                        </tr>
+                                        <tr>
+                                            <td>是否开启药品最高限价：开启</td>
+                                            <td>日记账药品删除期限：22</td>
+                                            <td>本县保障起始时间：2016-10-10</td>
+                                            <td>本县保障结束时间：2016-12-10</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>打印明细是否汇总：汇总</td>
+                                            <td>是否启用单次刷卡时间限制：不启用</td>
+                                            <td>单次刷卡时间：10</td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <p></p>
-
-            <div>
+            <div style="padding-bottom:100px;">
                 <ul style="list-style:none;">
                     <li style="float:left;width:33%;"><button class="btn btn-default">入院登记</button></li>
                     <li style="float:left;width:33%;"><button class="btn btn-default">取消登记</button></li>
