--- a/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
@@ -96,7 +96,7 @@
 
         <!-- main / large navbar -->
         <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar bootstrap-admin-navbar-under-small" role="navigation">
-            <div class="container">
+            <div class="container" id="">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="navbar-header">
@@ -217,5 +217,10 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/twitter-bootstrap-hover-dropdown.min.js"></script>
         <script type="text/javascript" src="js/bootstrap-admin-theme-change-size.js"></script>
+        <script type="text/javascript" src="js/jquery.cookie.js"></script>
+        <script type="text/javascript" src="js/xnh.js"></script>
+        <script type="text/javascript">
+
+        </script>
     </body>
 </html>
