--- a/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
@@ -74,8 +74,9 @@
            <script type="text/javascript" src="js/html5shiv.js"></script>
            <script type="text/javascript" src="js/respond.min.js"></script>
         <![endif]-->
+   
     </head>
-    <body class="bootstrap-admin-with-small-navbar">
+    <body class="bootstrap-admin-with-small-navbar" onload="checkLogin();">
         <!-- small navbar -->
         <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar-sm" role="navigation">
             <div class="container">
@@ -85,7 +86,7 @@
                             <ul class="nav navbar-nav navbar-left bootstrap-admin-theme-change-size">
                                 <li><a class="size-changer large active">门诊业务</a></li>
                                 <li><a class="size-changer large active">住院业务</a></li>
-                                <li><a class="size-changer large active">退出</a></li>
+                                <li><a class="size-changer large active" onclick="javascript: exit();">退出</a></li>
                             </ul>
                             
                         </div>
@@ -133,7 +134,7 @@
             </div><!-- /.container -->
         </nav>
 
-        <div class="container">
+        <div class="container" id="mainContent">
             <!-- left, vertical navbar & content -->
             <div class="row">
                 <div class="col-lg-12">
@@ -220,7 +221,7 @@
         <script type="text/javascript" src="js/jquery.cookie.js"></script>
         <script type="text/javascript" src="js/xnh.js"></script>
         <script type="text/javascript">
-
+           
         </script>
     </body>
 </html>
