--- a/VSWork/plxnhApi/ApiMonitor/pages/login.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/login.html
@@ -137,14 +137,24 @@ html,body {
 	</div>
 </div>
 
+    
     <script type="text/javascript">
         $(document).ready(function () {
-
+            
         });
 
         function loginClick() {
             var name = $("#username").val();
             var pwd = $("#password").val();
+            if (name == '') {
+                alert('请输入用户名');
+                return;
+            }
+            if (pwd == '') {
+                alert('请输入密码');
+                return;
+            }
+
             var param = "{'name':'" + name + "','pwd':'" + pwd + "'}";
             $.ajax({
                 type: "Post",
@@ -158,6 +168,7 @@ html,body {
                     if (retVal == '') {
                         alert('登录失败，请输入正确的用户名和密码');
                     } else {
+                        loginCache(name);
                         window.location = 'mzbc.html';
                     }
 
