--- a/VSWork/plxnhApi/ApiMonitor/pages/mzbc.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/mzbc.html
@@ -191,17 +191,111 @@
             <tr>
                 <td>地区编码：</td>
                 <td>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle"
-                                data-toggle="dropdown">
-                            选择 <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">北京</a></li>
-                            <li><a href="#">上海</a></li>
-                            <li><a href="#">其他</a></li>
-                        </ul>
-                    </div>
+                   <select id="areaNo" name="">
+                        <option value="">请选择</option>
+                        <option value="620000">甘肃省</option>
+                        <option value="620100">兰州市</option>
+                        <option value="620103">七里河区</option>
+                        <option value="620104">西固区</option>
+                        <option value="620105">安宁区</option>
+                        <option value="620111">红古区</option>
+                        <option value="620121">永登县</option>
+                        <option value="620122">皋兰县</option>
+                        <option value="620123">榆中县</option>
+                        <option value="620200">嘉峪关市</option>
+                        <option value="620300">金昌市</option>
+                        <option value="620302">金川区</option>
+                        <option value="620321">永昌县</option>
+                        <option value="620400">白银市</option>
+                        <option value="620402">白银区</option>
+                        <option value="620403">平川区</option>
+                        <option value="620421">靖远县</option>
+                        <option value="620422">会宁县</option>
+                        <option value="620423">景泰县</option>
+                        <option value="620500">天水市</option>
+                        <option value="620502">秦州区</option>
+                        <option value="620503">麦积区</option>
+                        <option value="620521">清水县</option>
+                        <option value="620522">秦安县</option>
+                        <option value="620523">甘谷县</option>
+                        <option value="620524">武山县</option>
+                        <option value="620525">张家川回族自治县</option>
+                        <option value="620600">武威市</option>
+                        <option value="620602">凉州区</option>
+                        <option value="620621">民勤县</option>
+                        <option value="620622">古浪县</option>
+                        <option value="620623">天祝县</option>
+                        <option value="620700">张掖市</option>
+                        <option value="620702">甘州区</option>
+                        <option value="620721">肃南县</option>
+                        <option value="620722">民乐县</option>
+                        <option value="620723">临泽县</option>
+                        <option value="620724">高台县</option>
+                        <option value="620725">山丹县</option>
+                        <option value="620800">平凉市</option>
+                        <option value="620802">崆峒区</option>
+                        <option value="620821">泾川县</option>
+                        <option value="620822">灵台县</option>
+                        <option value="620823">崇信县</option>
+                        <option value="620824">华亭县</option>
+                        <option value="620825">庄浪县</option>
+                        <option value="620826">静宁县</option>
+                        <option value="620900">酒泉市</option>
+                        <option value="620902">肃州区</option>
+                        <option value="620921">金塔县</option>
+                        <option value="620922">安西县</option>
+                        <option value="620923">肃北蒙古族自治县</option>
+                        <option value="620924">阿克塞哈萨克族自治县</option>
+                        <option value="620981">玉门市</option>
+                        <option value="620982">敦煌市</option>
+                        <option value="621000">庆阳市</option>
+                        <option value="621002">西峰区</option>
+                        <option value="621021">庆城县</option>
+                        <option value="621022">环县</option>
+                        <option value="621023">华池县</option>
+                        <option value="621024">合水县</option>
+                        <option value="621025">正宁县</option>
+                        <option value="621026">宁县</option>
+                        <option value="621027">镇原县</option>
+                        <option value="621100">定西市</option>
+                        <option value="621102">安定区</option>
+                        <option value="621121">通渭县</option>
+                        <option value="621122">陇西县</option>
+                        <option value="621123">渭源县</option>
+                        <option value="621124">临洮县</option>
+                        <option value="621125">漳县</option>
+                        <option value="621126">岷县</option>
+                        <option value="621200">陇南市</option>
+                        <option value="621202">武都区</option>
+                        <option value="621223">宕昌县</option>
+                        <option value="621221">成县</option>
+                        <option value="621224">康县</option>
+                        <option value="621222">文县</option>
+                        <option value="621225">西和县</option>
+                        <option value="621226">礼县</option>
+                        <option value="621228">两当县</option>
+                        <option value="621227">徽县</option>
+                        <option value="622900">临夏回族自治州</option>
+                        <option value="622901">临夏市</option>
+                        <option value="622921">临夏县</option>
+                        <option value="622922">康乐县</option>
+                        <option value="622923">永靖县</option>
+                        <option value="622924">广河县</option>
+                        <option value="622925">和政县</option>
+                        <option value="622926">东乡县</option>
+                        <option value="622927">积石山保安族东乡族撒拉族自治县</option>
+                        <option value="623000">甘南藏族自治州</option>
+                        <option value="623001">合作市</option>
+                        <option value="623021">临潭县</option>
+                        <option value="623022">卓尼县</option>
+                        <option value="623023">舟曲县</option>
+                        <option value="623024">迭部县</option>
+                        <option value="623025">玛曲县</option>
+                        <option value="623026">碌曲县</option>
+                        <option value="623027">夏河县</option>
+                        <option value="620201">嘉峪关市</option>
+
+                    </select>
                 </td>
                 <td style="padding-left:30px;"><button class="btn btn-success">读卡</button></td>
                 <td style="padding-left:30px;">医疗证号：</td>
@@ -215,17 +309,13 @@
             <tr>
                 <td>补偿类别：</td>
                 <td>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle"
-                                data-toggle="dropdown">
-                            选择 <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">类别1</a></li>
-                            <li><a href="#">类别2</a></li>
-                            <li><a href="#">类别3</a></li>
-                        </ul>
-                    </div>
+                    <select id="bclb" name="" style="width:235px;">
+                        <option value="">请选择</option>
+                        <option value="1">家庭帐户</option>
+                        <option value="2">个人帐户</option>
+                        <option value="3">统筹帐户</option>
+                        <option value="9">其他</option>
+                     </select>
                 </td>
                 <td style="padding-left:30px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 <td style="padding-left:30px;">门诊疾病编码：</td>
@@ -304,10 +394,10 @@
     <div class="bottomInfo">
         <div style="align-items:center;">
             <ul style="list-style:none;padding-bottom:2px;">
-                <li style="float:left;">使用单位:天泰医院</li>
-                <li style="float:left;padding-left:10px;">当前登录人:刘德华</li>
-                <li style="float:left;padding-left:10px;">所在单位ID:XDD888</li>
-                <li style="float:left;padding-left:10px;">当前时间:2016-11-01 12:12:15</li>
+                <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
+                <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
+                <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
+                <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
             </ul>
         </div>
     </div>
