--- a/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/czlp.html
@@ -195,10 +195,10 @@
         <div class="bottomInfo">
             <div style="align-items:center;">
                 <ul style="list-style:none;padding-bottom:2px;">
-                    <li style="float:left;">使用单位:天泰医院</li>
-                    <li style="float:left;padding-left:10px;">当前登录人:刘德华</li>
-                    <li style="float:left;padding-left:10px;">所在单位ID:XDD888</li>
-                    <li style="float:left;padding-left:10px;">当前时间:2016-11-01 12:12:15</li>
+                    <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
+                    <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
+                    <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
+                    <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
                 </ul>
             </div>
         </div>
