--- a/VSWork/plxnhApi/ApiMonitor/pages/login.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/login.html
@@ -140,7 +140,7 @@ html,body {
     
     <script type="text/javascript">
         $(document).ready(function () {
-            cacheCookie('ten', '10s');
+            
         });
 
         function loginClick() {
@@ -173,7 +173,7 @@ html,body {
                         for (var item in json) {
                             cacheCookie(item, json[item]);
                         }
-                        window.location = 'mzbc.html';
+                        window.location = 'menu.html';
                     }
 
                 },
