--- a/VSWork/plxnhApi/ApiMonitor/pages/menu.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/menu.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <title>住院明细上传</title>
+        <title>门诊补偿</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -112,7 +112,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="mzbc.html">门诊补偿</a></li>
                             <li><a href="rydj.html">住院业务</a></li>
-                            <li class="active"><a href="zymxsc.html">住院费用上传</a></li>
+                            <li><a href="zymxsc.html">住院费用上传</a></li>
                             <li><a href="czlp.html">发票打印</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-hover="dropdown">其他 <b class="caret"></b></a>
@@ -134,139 +134,7 @@
     </nav>
 
     <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="text-muted bootstrap-admin-box-title">已登记未结算患者列表</div>
-                    </div>
-                    <div class="bootstrap-admin-panel-content">
-                        <table class="table table-striped table-bordered" id="example">
-                            <thead>
-                                <tr>
-                                    <th>姓名+住院号</th>
-                                    <th>操作1</th>
-                                    <th>操作2</th>
-                                    <th>操作3</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr class="odd gradeX">
-                                    <td>刘德华 562148</td>
-                                    <td>
-                                        <a>单独传明细</a>
-                                        <br />
-                                        <a>查看明细项目</a>
-                                    </td>
-                                    <td>
-                                        <a>批量传明细</a>
-                                        <br />
-                                        <a>删除收费项目</a>
-                                    </td>
-                                    <td class="center">
-                                        <a>试算</a>
-                                        <br />
-                                        <a>结算收费</a>
-                                    </td>
-                                </tr>
-                                <tr class="even gradeC">
-                                    <td>张学友 562147</td>
-                                    <td>
-                                        <a>单独传明细</a>
-                                        <br />
-                                        <a>查看明细项目</a>
-                                    </td>
-                                    <td>
-                                        <a>批量传明细</a>
-                                        <br />
-                                        <a>删除收费项目</a>
-                                    </td>
-                                    <td class="center">
-                                        <a>试算</a>
-                                        <br />
-                                        <a>结算收费</a>
-                                    </td>
-                                </tr>
-                                <tr class="odd gradeA">
-                                    <td>郭富城 562146</td>
-                                    <td>
-                                        <a>单独传明细</a>
-                                        <br />
-                                        <a>查看明细项目</a>
-                                    </td>
-                                    <td>
-                                        <a>批量传明细</a>
-                                        <br />
-                                        <a>删除收费项目</a>
-                                    </td>
-                                    <td class="center">
-                                        <a>试算</a>
-                                        <br />
-                                        <a>结算收费</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="text-muted bootstrap-admin-box-title">明细</div>
-                    </div>
-                    <div class="bootstrap-admin-panel-content">
-                        <table class="table">
-
-                            <tbody>
-                                <tr>
-                                    <td>登录名：刘德华</td>
-                                    <td>所在单位ID：xxxx</td>
-                                    <td>电话：123456789</td>
-                                    <td>单位名称：4564687631xxadas</td>
-                                </tr>
-                                <tr>
-                                    <td>机构详细地址编码：1235</td>
-                                    <td>机构类型：乡</td>
-                                    <td>机构级别：村卫生室</td>
-                                    <td>机构地区编码：5464</td>
-                                </tr>
-                                <tr>
-                                    <td>补偿年度：2016</td>
-                                    <td>本县芯片卡刷卡授权：有刷卡权限</td>
-                                    <td>本县刷卡标志是够开启：开启</td>
-                                    <td>此医疗机构刷卡权限是否开启：刷</td>
-                                </tr>
-                                <tr>
-                                    <td>是否开启药品最高限价：开启</td>
-                                    <td>日记账药品删除期限：22</td>
-                                    <td>本县保障起始时间：2016-10-10</td>
-                                    <td>本县保障结束时间：2016-12-10</td>
-
-                                </tr>
-                                <tr>
-                                    <td>打印明细是否汇总：汇总</td>
-                                    <td>是否启用单次刷卡时间限制：不启用</td>
-                                    <td>单次刷卡时间：10</td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <p></p>
-
-
-
+        <span>欢迎</span>
     </div>
 
     <div class="bottomInfo">
