--- a/VSWork/plxnhApi/ApiMonitor/pages/menu.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/menu.html
@@ -83,8 +83,10 @@
                 <div class="col-lg-12">
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left bootstrap-admin-theme-change-size">
-                            <li><a class="size-changer large active">门诊业务</a></li>
-                            <li><a class="size-changer large active">住院业务</a></li>
+                            <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
+                            <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
+                            <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
+                            <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
                             <li><a class="size-changer large active" onclick="javascript: exit();">退出</a></li>
                         </ul>
 
@@ -110,8 +112,8 @@
                     </div>
                     <div class="collapse navbar-collapse main-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="mzbc.html">门诊补偿</a></li>
                             <li><a href="rydj.html">住院业务</a></li>
+                            <li><a href="mzbc.html">门诊补偿</a></li>
                             <li><a href="zymxsc.html">住院费用上传</a></li>
                             <li><a href="czlp.html">发票打印</a></li>
                             <li class="dropdown">
@@ -134,30 +136,9 @@
     </nav>
 
     <div class="container">
-        <span>欢迎</span>
+        <!-- 以下登陆后图片可以根据需要替换 -->
+        <img src="images/welcomePic.jpg" />
     </div>
-
-    <div class="bottomInfo">
-        <div style="align-items:center;">
-            <ul style="list-style:none;padding-bottom:2px;">
-                <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
-                <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
-                <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
-                <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
-            </ul>
-        </div>
-    </div>
-
-    <style>
-        .bottomInfo {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 30px;
-            background-color: #DDDDDD;
-        }
-    </style>
 
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
