--- a/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
+++ b/VSWork/plxnhApi/ApiMonitor/pages/rydj.html
@@ -67,6 +67,10 @@
             .row-urls .col-md-6 a{
                 font-size: 14px;
             }
+
+            #mask_background {position:absolute; z-index:998; top:0px; left:0px; background:rgb(50,50,50);background:rgba(0,0,0,0.5); display:none;}
+            #mask_content {position:absolute; width:500px; z-index:999; padding:10px; background:#fff; border-radius:5px; display:none;}
+
         </style>
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -76,6 +80,8 @@
         <![endif]-->
     </head>
 <body class="bootstrap-admin-with-small-navbar" onload="checkLogin();">
+    <div id="mask_background"></div>
+    <div id="mask_content"></div>
     <!-- small navbar -->
     <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar-sm" role="navigation">
         <div class="container">
@@ -83,8 +89,10 @@
                 <div class="col-lg-12">
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left bootstrap-admin-theme-change-size">
-                            <li><a class="size-changer large active">门诊业务</a></li>
-                            <li><a class="size-changer large active">住院业务</a></li>
+                            <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
+                            <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
+                            <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
+                            <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
                             <li><a class="size-changer large active" onclick="javascript: exit();">退出</a></li>
                         </ul>
 
@@ -110,8 +118,8 @@
                     </div>
                     <div class="collapse navbar-collapse main-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="mzbc.html">门诊补偿</a></li>
                             <li class="active"><a href="rydj.html">住院业务</a></li>
+                            <li><a href="mzbc.html">门诊补偿</a></li>
                             <li><a href="zymxsc.html">住院费用上传</a></li>
                             <li><a href="czlp.html">发票打印</a></li>
                             <li class="dropdown">
@@ -135,10 +143,10 @@
 
     <div class="container">
         <!-- left, vertical navbar & content -->
-        <form class="form-inline" role="form">
+        <div class="form-inline" role="form">
             <div class="form-group">
                 住院号：<label class="sr-only" for="exampleInputEmail2"></label>
-                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="">
+                <input type="text" class="form-control" id="zyh" placeholder="输入回车查询">
             </div>
 
             <button class="btn btn-success" style="margin-left:10px;">读卡</button>
@@ -147,7 +155,7 @@
                 医疗证号：<label class="sr-only" for="exampleInputPassword2"></label>
                 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="">
             </div>
-        </form>
+        </div>
 
         <p></p>
 
@@ -370,27 +378,7 @@
 
     </div>
 
-    <div class="bottomInfo">
-        <div style="align-items:center;">
-            <ul style="list-style:none;padding-bottom:2px;">
-                <li style="float:left;">使用单位:<span id="loginInfo_DEP_NAME"></span></li>
-                <li style="float:left;padding-left:10px;">当前登录人:<span id="loginInfo_USER_CODE"></span></li>
-                <li style="float:left;padding-left:10px;">所在单位ID:<span id="loginInfo_DEP_ID"></span></li>
-                <li style="float:left;padding-left:10px;">当前时间:<span id="loginInfo_dateTime"></span></li>
-            </ul>
-        </div>
-    </div>
-
-    <style>
-        .bottomInfo {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 30px;
-            background-color: #DDDDDD;
-        }
-    </style>
+   
 
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -398,6 +386,48 @@
     <script type="text/javascript" src="js/bootstrap-admin-theme-change-size.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/xnh.js"></script>
+    <script type="text/javascript">
+        //住院号回车触发查询HIS
+        $('#zyh').bind('keyup', function (event) {
+            if (event.keyCode == "13") {
+                var zyhVal = $("#zyh").val();
+                if (zyhVal == '') {
+                    alert("请输入住院号查询");
+                    return;
+                }
+
+                showMask("正在查询，请稍后...");
+
+                $.ajax({
+                    type: "Post",
+                    url: "xnhservice.asmx/zhyChaxun",
+                    data: "{'zyh':'" + zyhVal + "'}",
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json",
+                    success: function (data) {
+                        closeMask();
+
+                        //返回的数据用data.d获取内容
+                        var retVal = data.d;
+                        //遍历json数组操作
+                        var json = eval("(" + retVal + ")");
+                        for (var item in json.data) {
+                            var row = json.data[item];
+                            for (var key in row) {
+                                //alert(key + " " + row[key]);
+                                //todo：根据需要绑定解析和绑定前台数据
+                            }
+                        }
+                        
+                    },
+                    error: function (err) {
+                        closeMask();
+                        alert(err.toString());
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
