update xnh project

--- a/VSWork/xnh_new/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new/ApiMonitor/pages/mzbc.html
@@ -82,6 +82,10 @@
         <script type="text/javascript" src="js/bootstrap-datepicke r.js"></script>
     </head>
 <body class="bootstrap-admin-with-small-navbar" onload="checkLogin();">
+
+    <!--读卡驱动-->
+    <object classid=clsid:8A5B3626-40FC-4563-AF78-C9C4AC2ECFD6 width=0 height=0 align="center" id="CIccardCtrl" hspace=0 vspace=0></object>
+
     <div id="mask_background"></div>
     <div id="mask_content"></div>
     <!-- small navbar -->
