update auto trigger button when press enter key

--- a/VSWork/xnh_new/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new/ApiMonitor/pages/mzbc.html
@@ -187,6 +187,34 @@
                             </thead>
                             <tbody id="bclist">
                                
+                                <tr>
+                                    <td>1234</td>
+                                    <td>K4455</td>
+                                    <td>2016-10-31</td>
+                                    <td>150.12</td>
+                                    <td>255.12</td>
+                                    <td>刘德华</td>
+                                    <td>郭富城</td>
+                                    <td>张学友</td>
+                                    <td>522.11</td>
+                                    <td>
+                                        <input type="checkbox" value="1234" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2346</td>
+                                    <td>K4455</td>
+                                    <td>2016-10-31</td>
+                                    <td>150.12</td>
+                                    <td>255.12</td>
+                                    <td>刘德华</td>
+                                    <td>郭富城</td>
+                                    <td>张学友</td>
+                                    <td>522.11</td>
+                                    <td>
+                                        <input type="checkbox" value="2346" />
+                                    </td>
+                                </tr>
 
                             </tbody>
                         </table>
@@ -305,7 +333,7 @@
 
                     </select>
                 </td>
-                <td style="padding-left:30px;"><button class="btn btn-success">读卡</button></td>
+                <td style="padding-left:30px;"><button type="button" class="btn btn-success">读卡</button></td>
                 <td style="padding-left:30px;">医疗证号：</td>
                 <td><input style="width:200px;" placeholder=""></td>
             </tr>
@@ -371,10 +399,10 @@
 
         <div>
             <ul style="list-style:none;">
-                <li style="float:left;width:20%;"><button class="btn btn-default" onclick="javacript: tryCal();">试算</button></li>
-                <li style="float:left;width:20%;"><button class="btn btn-default">收费</button></li>
-                <li style="float:left;width:20%;"><button class="btn btn-default">冲正</button></li>
-                <li style="float:left;width:20%;"><button class="btn btn-default">打印补偿票据</button></li>
+                <li style="float:left;width:20%;"><button type="button" class="btn btn-default" onclick="javacript: tryCal();">试算</button></li>
+                <li style="float:left;width:20%;"><button type="button" class="btn btn-default">收费</button></li>
+                <li style="float:left;width:20%;"><button type="button" class="btn btn-default">冲正</button></li>
+                <li style="float:left;width:20%;"><button type="button" class="btn btn-default">打印补偿票据</button></li>
                 
             </ul>
         </div>
