--- a/VSWork/xnh_new/ApiMonitor/pages/zymxsc.html
+++ b/VSWork/xnh_new/ApiMonitor/pages/zymxsc.html
@@ -221,7 +221,7 @@
         </div>
 
         <div>
-            <button class="btn btn-default" id="batchUpload">批量传明细</button>
+            <button type="button" class="btn btn-default" id="batchUpload">批量传明细</button>
         </div>
 
         <p></p>
