--- a/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
@@ -900,7 +900,7 @@
                             var D401_02 = member[1];
                             var param = '\'' + USER_ID + '\',' + '\'' + AREA_NO + '\',' + '\'' + D401_21 + '\'';
                             $("#familyMember tbody").append('<tr><td>' + D401_21 + '</td><td>' + D401_02 +
-                                '</td><td><a href="javascript:getMemberInfo(' + param + ');">查看信息并入院登记</a></td><td></td></tr>');
+                                '</td><td><a href="javascript:getMemberInfo(' + param + ');">查看信息</a></td><td></td></tr>');
                         }
                         
                     } else {
